# LanguageNutter

./: CMakeLists.txt
include/: write_callback.hpp
src/: main.cpp
src/languagenut/: account.cpp  account.hpp  achievements.cpp  achievements.hpp  assignments.cpp  assignments.hpp  authed_request.cpp  curriculum.cpp  curriculums.cpp  exam_levels.cpp  init.cpp  languagenut.hpp  login.cpp  login.hpp  module_ids.cpp  ranking.cpp  ranking.hpp  skills.cpp  skills.hpp  translations.hpp  user_data.cpp  user_data.hpp  verb_categories.cpp  verb_translations.cpp
src/languagenut/types/: account.hpp  achievement.hpp  assignment.hpp  class.hpp  curriculum.hpp  curriculum_data.hpp  exam_data.hpp  exam_level.hpp  json_helpers.hpp  module.hpp  skills.hpp  str_to_bool.hpp  task.hpp  types.hpp  user.hpp  user_data.hpp  verb.hpp  verb_translation.hpp  vocab_screen.hpp
